# rex-machine

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/rex_machine/: __init__.py  __main__.py  agents.py  cli.py  config.py  models.py  renderer.py  scanner.py
src/rex_machine/templates/: report.md.j2
src/rex_machine/templates/prompts/: code_pattern_analyzer.j2  config_analyzer.j2  doc_analyzer.j2  main.j2  structure_analyzer.j2  synthesis.j2
src/tribl/: __init__.py  __main__.py  agents.py  cli.py  config.py  models.py  renderer.py  scanner.py
src/tribl/templates/: report.md.j2
src/tribl/templates/prompts/: config_analyzer.j2  main.j2  structure_analyzer.j2  synthesis.j2
tests/: test_models.py  test_scanner.py
