[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rex-machine"
version = "0.2.2"
description = "Extract lessons learned (REX) from code repositories"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "NicoJuiced" },
]
keywords = ["code-analysis", "rex", "lessons-learned", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/NicoJuiced/rex-machine"
Repository = "https://github.com/NicoJuiced/rex-machine"
Issues = "https://github.com/NicoJuiced/rex-machine/issues"

[project.scripts]
rex = "rex_machine.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rex_machine"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
